--- a/.dockerignore
+++ b/.dockerignore
@@ -31,6 +31,7 @@ docs/
 Makefile
 TASK.md
 IMPLEMENTATION_PLAN.md
+example/
 
 # 本地設定與資料
 config/config.yaml
@@ -64,3 +65,6 @@ vendor/
 Thumbs.db
 ehthumbs.db
 Desktop.ini
+
+data/
+bin/
